[tool.poetry]
name = "repl-nix-healthtrack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_healthtrack"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.1"
bson = "^0.5.10"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
